fix lecture video width on small devices

--- a/public/static/styles/less/course.less
+++ b/public/static/styles/less/course.less
@@ -20,3 +20,7 @@ main {
     margin-left: 10px;
   }
 }
+
+iframe {
+  max-width: 100%;
+}
